--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,59 +1,37 @@
-
 h1{
-  font-family: Helvetica, sans-serif;
+  background-color: lightgrey;
+  width:400px;
   text-align: center;
-  margin-top: 50px;
-}
-form{
-  font-family: Helvetica, sans-serif;
-  display: block;
-  margin-left: 350px;
-  margin-right: auto;
-}
-label{
-  display: inline-block;
-    float: left;
-    clear: left;
-    width: 250px;
-    text-align: right;
-
-}
-input {
-  display: inline-block;
-  float: left;
-}
-button{
-  font-family: Helvetica, sans-serif;
-  text-align: center;
-  display: block;
-  margin-top: 90px;
   margin-left: auto;
   margin-right: auto;
 }
-h3{
-  text-align: center;
-  font-family: Helvetica, sans-serif;
+.calculator{
+margin: auto;
+display: block;
+text-align: center;
+width:400px;
+background-color: darkgray;
 }
-P{
-  font-family: Helvetica, sans-serif;
-  display: block;
+.form{
+  width:390px;
+  background-color: lightgrey;
   margin-left: auto;
   margin-right: auto;
-  width: 500px;
-  text-align: center;
+  padding: 5px;
+  padding-bottom: 20px;
 }
-#employeeResult{
-  width: 100%;
-  overflow: hidden;
-  text-align: center;
+.form label{
+  clear:left;
+  width: 15%;
 }
-#employeeResult ul {
-  display: inline-block;
-  text-align: left;
+.form input{
+  clear: right;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 4px;
 }
-#employeeResult li{
-  list-style-type: none;
-}
-#employeeResult button{
-  margin-top: 0;
+.submitForm button{
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
