--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,9 @@ h1{
   margin-left: auto;
   margin-right: auto;
   border-radius: 4px;
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
 
 }
 .calculator{
@@ -13,13 +16,34 @@ margin: auto;
 display: block;
 text-align: center;
 width:390px;
-font-family: Arial, sans-serif;
+font-family: Futura, sans-serif;
 border-style: solid;
 border-width: thin;
 border-color: black;
 border-radius: 4px;
 padding:5px;
-background-color: #e6ffff;
+background-color:  #999999;
+}
+button{
+  background-color:  grey;
+  border: 1px solid darkgrey;
+   border-radius: 8px;
+   color: white;
+   padding: 5px 15px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 12px;
+   margin-top: 5px;
+   margin-bottom: 10px;
+   box-shadow: 2px 2px 2px 1px black;
+}
+button:hover{
+  background-color: white;
+  color:black;
+}
+input{
+  border-radius: 4px;
 }
 .form{
   width:390px;
@@ -29,6 +53,9 @@ background-color: #e6ffff;
 padding-top: 5px;
 padding-bottom: 5px;
 border-radius: 4px;
+border-style: solid;
+border-width: thin;
+border-color: black;
 }
 .form label{
   clear:left;
@@ -41,28 +68,28 @@ border-radius: 4px;
   margin-right: auto;
   margin-bottom: 4px;
 }
-.form button{
-  margin-top: 8px;
-  margin-bottom: 4px;
-}
-
 ul{
   text-align: center;
   list-style-type: none
   margin:auto;
   width 400px;
-
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
+  border-radius: 4px;
+  padding: 4px;
 }
 
  li{
   text-align: center;
   list-style-type: none;
-  width:390px;
+  width:375px;
   margin-bottom: 2px;
   margin-right: auto;
   margin-left:auto;
   background-color:lightgrey;
   border-radius: 4px;
+
 }
 li:nth-child(even){
   background-color: darkgrey;
@@ -84,12 +111,20 @@ li:last-child{
 }
 .salary{
 margin: auto;
-border: 5px, black;
+border-style: solid;
+border-width: thin;
+border-color: black;
+border-radius: 4px;
 }
 h3{
 background-color: darkgrey;
 border-radius: 4px;
+
 }
 p{
   margin-top: 2px;
+
+}
+.employee button{
+  margin-bottom: 8px;
 }
