--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,8 @@ border-color: black;
 border-radius: 4px;
 padding:5px;
 background-color:  #999999;
+box-shadow: 2px 2px 2px 1px grey;
+
 }
 button{
   background-color:  grey;
